--- a/social_insecurity/templates/index.html.j2
+++ b/social_insecurity/templates/index.html.j2
@@ -16,10 +16,12 @@
           <div class="card-body">
             <h5 class="card-title mb-3">Access an existing profile</h5>
             <form action="" method="post" novalidate>
+              {{ form.login.hidden_tag() }}
               <div class="mb-3">{{ form.login.username(class_="form-control") }}</div>
               <div class="mb-3">{{ form.login.password(class_="form-control") }}</div>
               <div class="mb-3 form-check form-check-inline">
-                {{ form.login.remember_me(class_="form-check-input") }} {{ form.login.remember_me.label(class_="form-check-label") }}
+                {{ form.login.remember_me(class_="form-check-input") }}
+                {{ form.login.remember_me.label(class_="form-check-label") }}
               </div>
               <div>{{ form.login.submit(class_="btn btn-primary") }}</div>
             </form>
@@ -33,6 +35,7 @@
           <div class="card-body">
             <h5 class="card-title mb-3">Create a new profile</h5>
             <form action="" method="post" novalidate>
+              {{ form.register.hidden_tag() }}
               <div class="mb-3">{{ form.register.first_name(class_="form-control") }}</div>
               <div class="mb-3">{{ form.register.last_name(class_="form-control") }}</div>
               <div class="mb-3">{{ form.register.username(class_="form-control") }}</div>
