--- a/social_insecurity/templates/profile.html.j2
+++ b/social_insecurity/templates/profile.html.j2
@@ -62,6 +62,9 @@
             <!--Edit details-->
             <div id="edit-details" style="display: none;">
               <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                {{ form.content() }}
+                {{ form.submit() }}
                 <div class="mb-2">{{ form.education(class_="form-control") }}</div>
                 <div class="mb-2">{{ form.employment(class_="form-control") }}</div>
                 <div class="mb-2">{{ form.music(class_="form-control") }}</div>
