--- a/social_insecurity/templates/index.html.j2
+++ b/social_insecurity/templates/index.html.j2
@@ -16,7 +16,7 @@
           <div class="card-body">
             <h5 class="card-title mb-3">Access an existing profile</h5>
             <form action="" method="post" novalidate>
-              {{ form.login.hidden_tag() }}
+              {{ form.csrf_token }}
               <div class="mb-3">{{ form.login.username(class_="form-control") }}</div>
               <div class="mb-3">{{ form.login.password(class_="form-control") }}</div>
               <div class="mb-3 form-check form-check-inline">
@@ -28,6 +28,7 @@
           </div>
         </div>
       </div>
+
       <!-- Register Form Card -->
       <div class="col-sm-12 col-lg-6">
         <div class="card text-center mb-3">
@@ -35,7 +36,7 @@
           <div class="card-body">
             <h5 class="card-title mb-3">Create a new profile</h5>
             <form action="" method="post" novalidate>
-              {{ form.register.hidden_tag() }}
+              {{ form.csrf_token }}
               <div class="mb-3">{{ form.register.first_name(class_="form-control") }}</div>
               <div class="mb-3">{{ form.register.last_name(class_="form-control") }}</div>
               <div class="mb-3">{{ form.register.username(class_="form-control") }}</div>
